--- a/src/styles.css
+++ b/src/styles.css
@@ -5,18 +5,20 @@
 
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,700);
 
-body {
-    font-family: 'Open Sans', 'sans-serif';
-    font-size: 1.5em;
-}
-h1, h2, h3{
-    margin:0;
-}
-ul ul, ol ul{
+*{
     margin: 0;
     padding: 0;
-    list-style-type: none;
 }
-h2{
-    font-size: 2.1em;
+body {
+    font-family: 'Open Sans', 'sans-serif';
+    font-size: 14px;
+}
+ul{
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+a:hover{
+    text-decoration: none;
+    color: inherit;
 }
