--- a/src/app/p-nav/p-nav.component.html
+++ b/src/app/p-nav/p-nav.component.html
@@ -6,10 +6,8 @@
 
   <div class="mainMenu">
     <i 
-      [hidden]="!isDesktop" 
-      (mouseover)="slideRight($event)"
-      (mouseleave)="slideStop($event)"
-      class="fa fa-angle-left"></i>
+      [hidden]="!isDesktop"
+      class="sliderControls fa fa-angle-left"></i>
     <ul class="sliderContainer">
       <li>
         <a href="#">Cosmetics</a>
@@ -18,20 +16,59 @@
         <a href="#">Nutritions</a>
         <div class="pullDown">
           <div class="pullDownContainer">
-              <i class="fa fa-angle-up"></i>
+              <i class="sliderControls fa fa-angle-up"></i>
+              <i class="sliderControls fa fa-angle-left"></i>
               <ul class="sliderContainer">
-                <li><a href="#">Category#1</a></li>
-                <li><a href="#">Category#2</a></li>
+                <li>
+                  <a href="#">Category#1</a>
+
+                  <div class="third-lvl-menu">
+                    <i class="sliderControls fa fa-angle-up"></i>
+                    <ul class="sliderContainer">
+                      <li><a href="#">SubMenu#1</a></li>
+                      <li><a href="#">SubMenu#2</a></li>
+                      <li><a href="#">SubMenu#3</a></li>
+                      <li><a href="#">SubMenu#4</a></li>
+                      <li><a href="#">SubMenu#5</a></li>
+                      <li><a href="#">SubMenu#6</a></li>
+                      <li><a href="#">SubMenu#7</a></li>
+                      <li><a href="#">SubMenu#8</a></li>
+                    </ul>
+                    <i class="sliderControls fa fa-angle-down"></i>                    
+                  </div>
+
+                </li>
+                <li>
+                  <a href="#">Category#2</a>
+
+                  <div class="third-lvl-menu">
+                    <i class="sliderControls fa fa-angle-up"></i>
+                    <ul class="sliderContainer">
+                      <li><a href="#">SubMenu#1</a></li>
+                      <li><a href="#">SubMenu#2</a></li>
+                      <li><a href="#">SubMenu#3</a></li>
+                      <li><a href="#">SubMenu#4</a></li>
+                      <li><a href="#">SubMenu#5</a></li>
+                      <li><a href="#">SubMenu#6</a></li>
+                      <li><a href="#">SubMenu#7</a></li>
+                      <li><a href="#">SubMenu#8</a></li>
+                    </ul>
+                    <i class="sliderControls fa fa-angle-down"></i>                    
+                  </div>
+                  
+                </li>
                 <li><a href="#">Category#3</a></li>
                 <li><a href="#">Category#4</a></li>
                 <li><a href="#">Category#5</a></li>
                 <li><a href="#">Category#6</a></li>
                 <li><a href="#">Category#7</a></li>
               </ul>
-              <i class="fa fa-angle-down"></i>
+              <i class="sliderControls fa fa-angle-down"></i>
+              <i class="sliderControls fa fa-angle-right"></i>
           </div>
           <div class="pullDownMeta">
-            <i class="fa fa-plus-circle"></i>
+            <i class="expandButton fa fa-plus-circle"></i>
+            <i class="fa fa-asterisk"></i>
             <h2>Nutritions</h2>
           </div>
         </div>
@@ -42,8 +79,66 @@
       <li>
         <a href="#">Childish</a>
       </li>
-      <li>
+      <li class="pullDownItem">
         <a href="#">Hygene</a>
+        <div class="pullDown">
+          <div class="pullDownContainer">
+              <i class="sliderControls fa fa-angle-up"></i>
+              <i class="sliderControls fa fa-angle-left"></i>
+              <ul class="sliderContainer">
+                <li>
+                  <a href="#">Category#1</a>
+
+                  <div class="third-lvl-menu">
+                    <i class="sliderControls fa fa-angle-up"></i>
+                    <ul class="sliderContainer">
+                      <li><a href="#">SubMenu#1</a></li>
+                      <li><a href="#">SubMenu#2</a></li>
+                      <li><a href="#">SubMenu#3</a></li>
+                      <li><a href="#">SubMenu#4</a></li>
+                      <li><a href="#">SubMenu#5</a></li>
+                      <li><a href="#">SubMenu#6</a></li>
+                      <li><a href="#">SubMenu#7</a></li>
+                      <li><a href="#">SubMenu#8</a></li>
+                    </ul>
+                    <i class="sliderControls fa fa-angle-down"></i>                    
+                  </div>
+
+                </li>
+                <li>
+                  <a href="#">Category#2</a>
+
+                  <div class="third-lvl-menu">
+                    <i class="sliderControls fa fa-angle-up"></i>
+                    <ul class="sliderContainer">
+                      <li><a href="#">SubMenu#1</a></li>
+                      <li><a href="#">SubMenu#2</a></li>
+                      <li><a href="#">SubMenu#3</a></li>
+                      <li><a href="#">SubMenu#4</a></li>
+                      <li><a href="#">SubMenu#5</a></li>
+                      <li><a href="#">SubMenu#6</a></li>
+                      <li><a href="#">SubMenu#7</a></li>
+                      <li><a href="#">SubMenu#8</a></li>
+                    </ul>
+                    <i class="sliderControls fa fa-angle-down"></i>                    
+                  </div>
+                  
+                </li>
+                <li><a href="#">Category#3</a></li>
+                <li><a href="#">Category#4</a></li>
+                <li><a href="#">Category#5</a></li>
+                <li><a href="#">Category#6</a></li>
+                <li><a href="#">Category#7</a></li>
+              </ul>
+              <i class="sliderControls fa fa-angle-down"></i>
+              <i class="sliderControls fa fa-angle-right"></i>
+          </div>
+          <div class="pullDownMeta">
+            <i class="expandButton fa fa-plus-circle"></i>
+            <i class="fa fa-asterisk"></i>
+            <h2>Hygene</h2>
+          </div>
+        </div>
       </li>
       <li>
         <a href="#">Orthopedics</a>
@@ -68,10 +163,8 @@
       </li>
     </ul>
     <i 
-      [hidden]="!isDesktop" 
-      (mouseover)="slideLeft($event)"
-      (mouseleave)="slideStop($event)"
-      class="fa fa-angle-right"></i>
+      [hidden]="!isDesktop"
+      class="sliderControls fa fa-angle-right"></i>
   </div>
 
   <div class="nav-right">
