navBar Behaviour for mobile devices done

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <p-nav></p-nav>
-<app-temp></app-temp>
+<!-- <app-temp></app-temp> -->
 
