--- a/src/app/p-nav/p-nav.component.css
+++ b/src/app/p-nav/p-nav.component.css
@@ -91,7 +91,9 @@ nav>div{
     margin: 10px auto;
 }
 
-.third-lvl-menu, .pullDownMeta i.fa-asterisk, .pullDownContainer>i.fa-angle-right, .pullDownContainer>i.fa-angle-left{
+.third-lvl-menu, .pullDownMeta i.fa-asterisk, .pullDownContainer>i.fa-angle-right,
+ .pullDownContainer>i.fa-angle-left, #mainMenuToggleButton, .pullDownItem > i, 
+ .responsiveMenuHeader{
     display: none;
 }
 
@@ -161,4 +163,156 @@ nav>div{
 
 .expanded .third-lvl-menu ul > li {
     padding: 10px 0;
+}
+
+
+
+/* Responsive Code Goes Here */
+
+@media screen and (max-width:1024px) {
+    
+    .pullDownMeta{
+        display: none;
+    }
+    
+    nav{
+        justify-content: space-between;
+        padding: 0 8px;
+    }
+
+    .mainMenu{
+        position: absolute;
+        top: 0;
+        left: -350px;
+        flex-direction: column;
+        height: 500px;
+        width: 350px;
+        transition: left .5s ease-in-out;
+    }
+
+    .mainMenu > i {
+        margin: 0 auto;
+    }
+
+    .logo {
+        font-size: 30px;
+    }
+
+    .nav-right ul li {
+        padding: 10px 15px;
+    }
+
+    .mainMenu.mView{
+        left: 0;
+    }
+
+    #mainMenuToggleButton{
+        display: flex;
+        width: 25%;
+    }
+    #mainMenuToggleButton > i {
+        font-size: 30px;
+    }
+
+    .responsiveMenuHeader{
+        display: flex;
+        justify-content: space-between;
+        min-height: 45px;
+        padding: 5px 10px;
+        font-size: 25px;
+        background-color: #DBDBDB;
+        color: #000;
+    }
+    .responsiveMenuHeader > h4{
+        margin: auto 0;
+        font-weight: bold;
+    }
+    .responsiveMenuHeader > i{
+        margin: auto 0;
+    }
+    .mainMenu > ul{
+        margin: 0;
+    }
+    .mainMenu > ul > li {
+        display: flex;
+        padding: 0;
+        border-bottom: 1px solid #ddd;
+        position: relative;
+    }
+    .mainMenu > ul > li:last-child{
+        border:none;
+    }
+    .mainMenu > ul > li > a{
+        padding: 10px 5px; 
+        margin: auto 0px auto 20px;
+    }
+
+    .pullDownItem {
+        min-height: 43px;
+    }
+    .pullDownItem > i{
+        display: inline-block;
+        font-size: 25px;
+        position: absolute;
+        right: 0;
+        margin: 8px 10px 0px 0px;
+    }
+    
+
+    .pullDownItem > .pullDown{
+        display: none;
+        position: relative;
+        top: 0;
+        left: 0 !important;
+        width: 100%;
+        background-color: #fff;
+    }
+    .pullDownContainer{
+        width: 100%;
+        padding: 0;
+        border: none;
+    }
+    .pullDownContainer>i{
+        background-color: #C3C3C3;
+        display: block;
+        text-align: center;
+        line-height: 40px;
+        font-size: 30px;
+        margin: 0;
+    }
+    .pullDownContainer>ul{
+        margin: 0;
+    }
+    .pullDownContainer>ul>li{
+        padding: 10px;
+        background-color: #12C5C3;
+        padding-left: 50px;
+        border-bottom: 1px solid #FFF;
+    }
+    .pullDownContainer>ul>li>a{
+        color:#fff;
+    }
+    .mExpanded > a {
+        display: none;
+    }
+    .mExpanded > i {
+        color: #000;
+    }
+    .mainMenu > ul > li.mExpanded > a.titled {
+        display: block;
+        z-index: 2;
+        position: absolute;
+        top: 100px;
+        right: -60px;
+        transform: rotate(90deg);
+        width: 170px;
+        height: 50px;
+        text-transform: uppercase;
+        font-size: 18px;
+        background-color: #fff;
+        padding: 10px;
+        color: #000;
+        font-weight: bold;
+    }
+
 }
