--- a/src/app/p-nav/p-nav.component.html
+++ b/src/app/p-nav/p-nav.component.html
@@ -180,6 +180,18 @@
       <li><a href="#"><i class="fa fa-search"></i></a></li>
       <li><a href="#"><i class="fa fa-shopping-cart"></i></a></li>
       <li><a href="#"><i class="fa fa-user"></i></a></li>
+      <li id="lang">
+          <ul class="flagsContainer">
+            <li><a href="#"><img src="assets/images/flags/brqx_flag_china_2016_320_200.png" alt=""></a></li>
+            <li><a href="#"><img src="assets/images/flags/brqx_flag_china_2016_320_200.png" alt=""></a></li>
+            <li class="active"><a href="#"><img src="assets/images/flags/brqx_flag_china_2016_320_200.png" alt=""></a></li>
+            <li><a href="#"><img src="assets/images/flags/brqx_flag_china_2016_320_200.png" alt=""></a></li>
+            <li><a href="#"><img src="assets/images/flags/brqx_flag_china_2016_320_200.png" alt=""></a></li>
+            <li><a href="#"><img src="assets/images/flags/brqx_flag_china_2016_320_200.png" alt=""></a></li>
+            <li><a href="#"><img src="assets/images/flags/brqx_flag_china_2016_320_200.png" alt=""></a></li>
+            <li><a href="#"><img src="assets/images/flags/brqx_flag_china_2016_320_200.png" alt=""></a></li>
+          </ul>
+      </li>
     </ul>
   </div>
 
