--- a/src/app/p-nav/p-nav.component.css
+++ b/src/app/p-nav/p-nav.component.css
@@ -50,6 +50,10 @@ nav>div{
     padding: 15px;
 }
 
+/* .nav-right #lang{
+    
+} */
+
 .pullDown{
     position: absolute;
     background-color: #000;
@@ -165,6 +169,42 @@ nav>div{
     padding: 10px 0;
 }
 
+
+
+
+
+
+
+/* Flag Container */
+
+#lang{
+    position: relative;
+}
+
+.flagsContainer{
+    display: none;
+    position: absolute;
+    left: 0;
+    top: 55px;
+    height: 250px;
+    width: 70px;
+    overflow-y: scroll;
+}
+
+.activeFlag{
+    height: 25px;
+    width: 40px;
+}
+
+
+.flagsContainer img {
+    width: 50px;
+    height: 30px;
+}
+.flagsContainer li a {
+    padding: 5px 3px;
+    display: block;
+}
 
 
 /* Responsive Code Goes Here */
