--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <p-nav></p-nav>
+<home-page></home-page>
 <!-- <app-temp></app-temp> -->
 
