--- a/src/styles.css
+++ b/src/styles.css
@@ -5,6 +5,10 @@
 
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,700);
 
+html,body{
+    height: 100%;
+}
+
 *{
     margin: 0;
     padding: 0;
@@ -22,3 +26,4 @@ a:hover{
     text-decoration: none;
     color: inherit;
 }
+
