Homepage component finished (responsive left)

--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -135,13 +135,214 @@
           </div>
         </div>
       </div>
+
+      <div class="productSlider row">
+        <div class="col-sm-4 singleProduct">
+          <div class="singleProductInner">
+            <img class="productImage" src="assets/images/product.jpg" alt="">
+            <div class="shortDescription">
+              <p class="productTitle">Alcohol Interapothek Heridline 1000 ml</p>
+              <p class="price"><s class="old">2.07$</s><span class="new">2.07$</span></p>
+            </div>
+            <div class="longDescription">
+              <a href='#' class="productTitle">Alcohol Interapothek Heridline 1000 ml</a>
+              <div class="ValuableInfo">
+                <div class="rating">
+                  <i class="fa fa-star"></i>
+                  <i class="fa fa-star"></i>
+                  <i class="fa fa-star"></i>
+                  <i class="fa fa-star"></i>
+                  <i class="fa fa-star"></i>
+                  <span>37</span>
+                </div>
+                <p class="price"><s class="old">2.07$</s><span class="new">2.07$</span></p>
+              </div>
+              <div class="atcButton">
+                <a href="#">
+                  <i class="fa fa-shopping-cart"></i>
+                  <span>Add to Cart</span>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-4 singleProduct">
+          <div class="singleProductInner">
+            <img class="productImage" src="assets/images/product.jpg" alt="">
+            <div class="shortDescription">
+              <p class="productTitle">Alcohol Interapothek Heridline 1000 ml</p>
+              <p class="price"><s class="old">2.07$</s><span class="new">2.07$</span></p>
+            </div>
+            <div class="longDescription">
+              <a href='#' class="productTitle">Alcohol Interapothek Heridline 1000 ml</a>
+              <div class="ValuableInfo">
+                <div class="rating">
+                  <i class="fa fa-star"></i>
+                  <i class="fa fa-star"></i>
+                  <i class="fa fa-star"></i>
+                  <i class="fa fa-star"></i>
+                  <i class="fa fa-star"></i>
+                  <span>37</span>
+                </div>
+                <p class="price"><s class="old">2.07$</s><span class="new">2.07$</span></p>
+              </div>
+              <div class="atcButton">
+                <a href="#">
+                  <i class="fa fa-shopping-cart"></i>
+                  <span>Add to Cart</span>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-4 singleProduct">
+          <div class="singleProductInner">
+            <img class="productImage" src="assets/images/product.jpg" alt="">
+            <div class="shortDescription">
+              <p class="productTitle">Alcohol Interapothek Heridline 1000 ml</p>
+              <p class="price"><s class="old">2.07$</s><span class="new">2.07$</span></p>
+            </div>
+            <div class="longDescription">
+              <a href='#' class="productTitle">Alcohol Interapothek Heridline 1000 ml</a>
+              <div class="ValuableInfo">
+                <div class="rating">
+                  <i class="fa fa-star"></i>
+                  <i class="fa fa-star"></i>
+                  <i class="fa fa-star"></i>
+                  <i class="fa fa-star"></i>
+                  <i class="fa fa-star"></i>
+                  <span>37</span>
+                </div>
+                <p class="price"><s class="old">2.07$</s><span class="new">2.07$</span></p>
+              </div>
+              <div class="atcButton">
+                <a href="#">
+                  <i class="fa fa-shopping-cart"></i>
+                  <span>Add to Cart</span>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-4 singleProduct">
+          <div class="singleProductInner">
+            <img class="productImage" src="assets/images/product.jpg" alt="">
+            <div class="shortDescription">
+              <p class="productTitle">Alcohol Interapothek Heridline 1000 ml</p>
+              <p class="price"><s class="old">2.07$</s><span class="new">2.07$</span></p>
+            </div>
+            <div class="longDescription">
+              <a href='#' class="productTitle">Alcohol Interapothek Heridline 1000 ml</a>
+              <div class="ValuableInfo">
+                <div class="rating">
+                  <i class="fa fa-star"></i>
+                  <i class="fa fa-star"></i>
+                  <i class="fa fa-star"></i>
+                  <i class="fa fa-star"></i>
+                  <i class="fa fa-star"></i>
+                  <span>37</span>
+                </div>
+                <p class="price"><s class="old">2.07$</s><span class="new">2.07$</span></p>
+              </div>
+              <div class="atcButton">
+                <a href="#">
+                  <i class="fa fa-shopping-cart"></i>
+                  <span>Add to Cart</span>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-4 singleProduct">
+          <div class="singleProductInner">
+            <img class="productImage" src="assets/images/product.jpg" alt="">
+            <div class="shortDescription">
+              <p class="productTitle">Alcohol Interapothek Heridline 1000 ml</p>
+              <p class="price"><s class="old">2.07$</s><span class="new">2.07$</span></p>
+            </div>
+            <div class="longDescription">
+              <a href='#' class="productTitle">Alcohol Interapothek Heridline 1000 ml</a>
+              <div class="ValuableInfo">
+                <div class="rating">
+                  <i class="fa fa-star"></i>
+                  <i class="fa fa-star"></i>
+                  <i class="fa fa-star"></i>
+                  <i class="fa fa-star"></i>
+                  <i class="fa fa-star"></i>
+                  <span>37</span>
+                </div>
+                <p class="price"><s class="old">2.07$</s><span class="new">2.07$</span></p>
+              </div>
+              <div class="atcButton">
+                <a href="#">
+                  <i class="fa fa-shopping-cart"></i>
+                  <span>Add to Cart</span>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-4 singleProduct">
+          <div class="singleProductInner">
+            <img class="productImage" src="assets/images/product.jpg" alt="">
+            <div class="shortDescription">
+              <p class="productTitle">Alcohol Interapothek Heridline 1000 ml</p>
+              <p class="price"><s class="old">2.07$</s><span class="new">2.07$</span></p>
+            </div>
+            <div class="longDescription">
+              <a href='#' class="productTitle">Alcohol Interapothek Heridline 1000 ml</a>
+              <div class="ValuableInfo">
+                <div class="rating">
+                  <i class="fa fa-star"></i>
+                  <i class="fa fa-star"></i>
+                  <i class="fa fa-star"></i>
+                  <i class="fa fa-star"></i>
+                  <i class="fa fa-star"></i>
+                  <span>37</span>
+                </div>
+                <p class="price"><s class="old">2.07$</s><span class="new">2.07$</span></p>
+              </div>
+              <div class="atcButton">
+                <a href="#">
+                  <i class="fa fa-shopping-cart"></i>
+                  <span>Add to Cart</span>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-4 singleProduct">
+          <div class="singleProductInner">
+            <img class="productImage" src="assets/images/product.jpg" alt="">
+            <div class="shortDescription">
+              <p class="productTitle">Alcohol Interapothek Heridline 1000 ml</p>
+              <p class="price"><s class="old">2.07$</s><span class="new">2.07$</span></p>
+            </div>
+            <div class="longDescription">
+              <a href='#' class="productTitle">Alcohol Interapothek Heridline 1000 ml</a>
+              <div class="ValuableInfo">
+                <div class="rating">
+                  <i class="fa fa-star"></i>
+                  <i class="fa fa-star"></i>
+                  <i class="fa fa-star"></i>
+                  <i class="fa fa-star"></i>
+                  <i class="fa fa-star"></i>
+                  <span>37</span>
+                </div>
+                <p class="price"><s class="old">2.07$</s><span class="new">2.07$</span></p>
+              </div>
+              <div class="atcButton">
+                <a href="#">
+                  <i class="fa fa-shopping-cart"></i>
+                  <span>Add to Cart</span>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
 
-
-
-
-    
-    
 
   </div>
 </div>
