--- a/src/app/home-page/home-page.component.css
+++ b/src/app/home-page/home-page.component.css
@@ -6,9 +6,31 @@
 .homePage{
     position: relative;
     width: 100%;
-    height: 100%;
+    background: url("../../assets/images/bg.jpg") center no-repeat;
+    -webkit-background-size: cover;
+    background-size: cover;
 }
 
+.homePage:after {
+    position: absolute;
+    content: "";
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(25,224,221,0.8);
+    background: -moz-linear-gradient(left, rgba(25,224,221,0.8) 0%, rgba(25,224,221,0) 0%, rgba(25,224,221,0.9) 0%, rgba(31,145,207,0.9) 100%);
+    background: -webkit-gradient(left top, right top, color-stop(0%, rgba(25,224,221,0.8)), color-stop(0%, rgba(25,224,221,0)), color-stop(0%, rgba(25,224,221,0.9)), color-stop(100%, rgba(31,145,207,0.9)));
+    background: -webkit-linear-gradient(left, rgba(25,224,221,0.8) 0%, rgba(25,224,221,0) 0%, rgba(25,224,221,0.9) 0%, rgba(31,145,207,0.9) 100%);
+    background: -o-linear-gradient(left, rgba(25,224,221,0.8) 0%, rgba(25,224,221,0) 0%, rgba(25,224,221,0.9) 0%, rgba(31,145,207,0.9) 100%);
+    background: -ms-linear-gradient(left, rgba(25,224,221,0.8) 0%, rgba(25,224,221,0) 0%, rgba(25,224,221,0.9) 0%, rgba(31,145,207,0.9) 100%);
+    background: linear-gradient(to right, rgba(25,224,221,0.8) 0%, rgba(25,224,221,0) 0%, rgba(25,224,221,0.9) 0%, rgba(31,145,207,0.9) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#19e0dd', endColorstr='#1f91cf', GradientType=1 );
+}
+.overlay{
+    position: relative;
+    z-index: 4;
+}
 .verticalLeftSlider{
     height: 400px;
     display: flex;
@@ -40,7 +62,11 @@
 }
 .verticalLeftSlider ul li a{
     font-size: 60px;
-    color: #000;
+    color: #fff;
+    transition: .5s;
+}
+.verticalLeftSlider ul li a:hover{
+    color: #F5774F;
 }
 
 
@@ -55,20 +81,19 @@
 
  #promoSliderNav{
      display: flex;
+     border: 1px solid #Fff;
  }
 
  #promoSliderNav > .slick-list{
      overflow: hidden;
      margin: 0 10px;
  }
- #promoSliderNav > .slick-list > div{
-    /* margin-top: 8px; */
- }
+ 
  #promoSliderNav > i {
-    background-color: red;
+    background-color: #fff;
     font-size: 30px;
     margin: auto 0;
-    padding: 5px;
+    padding: 7.5px;
  }
  #promoSliderNav i.fa-angle-left{
     left: -20px;
@@ -90,7 +115,7 @@
      font-size: 1em;
  }
  .promoNavItem.slick-current{
-     background-color: #78c55f;
+     background-color: #fff;
      font-size: 1.2em;
  }
 
@@ -118,3 +143,172 @@
 .galleryImgContiner span{
     margin: 0 auto;
 }
+
+
+
+/* Product Section start */
+.productSlider{
+    width: calc(100% - 100px);
+    margin: 40px auto 0 auto;
+    padding-bottom: 40px;
+
+  }
+  .singleProduct {
+      height: 180px;
+      padding: 10px;
+      border: 1px solid #fff;
+      margin: 0 15px;
+      position: relative;
+  }
+  .singleProductInner{
+    position: relative;
+    width: 100%;
+    height: 100%;
+    overflow:hidden;
+  }
+  .singleProductInner:hover .shortDescription{
+    bottom: -100%;
+  }
+  .singleProductInner:hover .longDescription{
+    top: 0;
+
+  }
+
+  .shortDescription {
+    position: absolute;
+    bottom: 0px;
+    display: flex;
+    background-color: rgba(110,220,219,.6);
+    width: 100%;
+    justify-content: space-around;
+    padding: 5px;
+    transition: .5s;
+  }
+  .shortDescription p{
+    margin: 0;
+  }
+  .shortDescription .productTitle{
+    flex-basis: 70%;
+    color: #4E4D53;
+    font-size: 1em;
+    margin-right: 10px;
+  }
+  .shortDescription .price{
+    display: flex;
+    flex-direction: column;
+    flex-basis: 20%;
+  }
+  .shortDescription .price .old{
+    margin: auto;
+    color: #7F8487;
+  }
+  .shortDescription .price .new{
+    color: #F5774F;
+    font-size: 1.4em;
+    margin-top: auto;
+  }
+
+  .longDescription {
+      position: absolute;
+      display: flex;
+      top: -100%;
+      transition: .4s;
+      flex-direction: column;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(255,69,10,.7);
+  }
+
+  .longDescription .productTitle{
+    flex: 1;
+    text-align: center;
+    color: #000;
+    margin: 5px 2px 2px 0;
+    font-size: 1.2em;
+    box-sizing: border-box;
+  }
+  .longDescription .ValuableInfo{
+    flex: 1;
+    color: #fff;
+    display: flex;
+  }
+  .longDescription .atcButton{
+    flex: 1;
+    border-top: 1px solid #fff;
+    width: 100%;
+    height: 100%;
+    display: flex;
+  }
+  .longDescription .atcButton a{
+    color: #fff;
+    font-size: 1.2em;
+    flex:1;
+    margin: auto;
+    text-align: center;
+  }
+  .longDescription .atcButton a:hover{
+    text-decoration: none;
+  }
+  .longDescription .atcButton a span{
+    margin-left: 5px;
+  }
+  .longDescription .ValuableInfo .rating{
+    flex:1;
+    margin: auto 5px;
+
+  }
+  .longDescription .ValuableInfo .rating span{
+    margin-left: 5px;
+  }
+  .longDescription .ValuableInfo .price{
+    flex:1;
+    display: flex;
+    margin: auto;
+  }
+  .longDescription .ValuableInfo .price .old{
+    flex:1;
+    color: #655d5d;
+    margin:auto;
+  }
+  .longDescription .ValuableInfo .price .new{
+    flex:1;
+    font-size: 1.2em;
+
+  }
+  img.productImage {
+      width: 100%;
+      height: 100%;
+  }
+  .productSlider .slick-arrow{
+    color: #fff;
+    font-size: 30px;
+    position: absolute;
+    border: 1px solid #fff;
+    border-radius: 50%;
+    width: 40px;
+    text-align: center;
+    height: 40px;
+    line-height: 37px;
+    top: calc(50% - 20px);
+    transition: .5s;
+  }
+  .productSlider .slick-arrow:hover {
+      border: 1px solid rgba(0,0,0,.2);
+      background-color: rgba(0,0,0,.2);
+      cursor: pointer;
+  }
+  .productSlider .slick-arrow.prevButton{
+    left: -50px;
+  }
+  .productSlider .slick-arrow.nextButton{
+    right: -50px;
+  }
+
+  @media only screen and (max-width: 767px){
+    .productSlider{
+        width: 100%;
+    }
+  }
+
+  /* Product Section End */
+
