--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <p-nav></p-nav>
-<home-page></home-page>
+<router-outlet></router-outlet>
+<!-- <home-page></home-page> -->
 <!-- <app-temp></app-temp> -->
 
